Drop 1.15 support for future native 1.17. Replace use of #newInstance deprecated method instanciating traits.